RECURSOS-GRUPO1-TP/mundose-configuraciones/mapa-interactivo-app/service-mapa-interactivo.yaml
apiVersion: v1
kind: Service
metadata:
  name: mapa-interactivo-service
  labels:
    app: mapa-interactivo
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: mapa-interactivo
